apps/talos/musicassistant/music-assistant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-assistant
  namespace: smarthome
  labels:
    hilmargustafs.com/group: internal
    hilmargustafs.com/media: "true"
spec:
  defaultBackend:
    service:
      name: music-assistant
      port:
        number: 8095
  ingressClassName: tailscale
  tls:
    - hosts:
        - music-assistant
